new favicon and header

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,13 @@
 img/
 img-min/
 customers/
+android-chrome-192x192.png
+android-chrome-384x384.png
+apple-touch-icon.png
+browserconfig.xml
+favicon-16x16.png
+favicon-32x32.png
+mstile-150x150.png
+site.webmanifest
+safari-pinned-tab.svg
+favicon.ico
